--- a/config.json
+++ b/config.json
@@ -1,21 +1,22 @@
 {
-  "readmeUrl": "https://raw.githubusercontent.com/cveinnt/cveinnt/master/README.md",
-  "title": "LiveTerm",
-  "name": "John Doe",
-  "ascii": "liveterm",
+  "readmeUrl": "https://raw.githubusercontent.com/MagicLike/MagicLike/master/README.md",
+  "title": "MagicLike | Terminal",
+  "name": "MagicLike",
+  "ascii": "MagicLike",
   "social": {
-    "github": "github",
-    "linkedin": "linkedin"
+    "github": "MagicLike",
+    "codeberg": "MagicLike"
   },
-  "email": "contact@email.com",
-  "ps1_hostname": "liveterm",
+  "email": "contact@magiclike.net",
+  "ps1_hostname": "terminal",
   "ps1_username": "visitor",
-  "repo": "https://github.com/Cveinnt/LiveTerm",
-  "resume_url": "https://upload.wikimedia.org/wikipedia/commons/c/cc/Resume.pdf",
+  "repo": "https://github.com/MagicLike/LiveTerm",
   "donate_urls": {
-    "paypal": "https://paypal.me/cveinnt",
-    "patreon": "https://patreon.com/cveinnt"
+    "donate_website": "https://magiclike.codeberg.page/#donate",
+    "doge": "dogecoin:D7VuQkUtUbcfijT1vxKsgjWtuLBXR6NUJG",
+    "bitcoin": "bitcoin:bc1qk7xvey59l9h0umz9vufs89hwwrz9t9zwhqyqaj"
   },
+  "website": "https://magiclike.codeberg.page",
   "colors": {
     "light": {
       "background": "#FBF1C9",
